--- a/res/layout/bottom_board.xml
+++ b/res/layout/bottom_board.xml
@@ -1,5 +1,6 @@
 <games.ghoststories.views.PlayerBoardView 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:gs="http://schemas.android.com/apk/res/games.ghoststories"
     android:id="@+id/bottom_board"
     android:padding="5dp"
     android:layout_width="match_parent"
@@ -75,32 +76,35 @@
         android:layout_weight="4"
         android:orientation="horizontal" >
 
-        <ImageView
+        <games.ghoststories.views.PlayerBoardCardView
             android:id="@+id/left_space"
             android:contentDescription="@string/left_space"
+            gs:card_location="left"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"/>
-            <!-- android:src="@drawable/red_left" /> -->
+            android:scaleType="fitXY"
+            android:src="@drawable/red_left"/>
 
-        <ImageView
+        <games.ghoststories.views.PlayerBoardCardView
             android:id="@+id/middle_space"
             android:contentDescription="@string/middle_space"
+            gs:card_location="middle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"/>
-            <!-- android:src="@drawable/red_middle" /> -->
+            android:scaleType="fitXY"
+            android:src="@drawable/red_middle" />
 
-        <ImageView
+        <games.ghoststories.views.PlayerBoardCardView
             android:id="@+id/right_space"
             android:contentDescription="@string/right_space"
+            gs:card_location="right"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:scaleType="fitXY"/>
-            <!-- android:src="@drawable/red_right" /> -->
+            android:scaleType="fitXY"
+            android:src="@drawable/red_right" />
     </LinearLayout>
 
 </games.ghoststories.views.PlayerBoardView>
