--- a/res/layout/combat_player_info.xml
+++ b/res/layout/combat_player_info.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/transparent">
 
     <games.ghoststories.views.common.TaoTokenView
-        android:id="@+id/black_tau_tokens"
+        android:id="@+id/black_tao_tokens"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -15,7 +15,7 @@
         gs:token_color="black" />
 
     <games.ghoststories.views.common.TaoTokenView
-        android:id="@+id/blue_tau_tokens"
+        android:id="@+id/blue_tao_tokens"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -23,7 +23,7 @@
         gs:token_color="blue" />
 
     <games.ghoststories.views.common.TaoTokenView
-        android:id="@+id/green_tau_tokens"
+        android:id="@+id/green_tao_tokens"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -31,7 +31,7 @@
         gs:token_color="green" />
 
     <games.ghoststories.views.common.TaoTokenView
-        android:id="@+id/red_tau_tokens"
+        android:id="@+id/red_tao_tokens"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -39,7 +39,7 @@
         gs:token_color="red" />
 
     <games.ghoststories.views.common.TaoTokenView
-        android:id="@+id/yellow_tau_tokens"
+        android:id="@+id/yellow_tao_tokens"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
