--- a/res/layout/left_token_area.xml
+++ b/res/layout/left_token_area.xml
@@ -50,7 +50,7 @@
         android:orientation="vertical" >
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/black_tau_tokens"
+            android:id="@+id/black_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -59,7 +59,7 @@
             gs:token_color="black" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/blue_tau_tokens"
+            android:id="@+id/blue_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -68,7 +68,7 @@
             gs:token_color="blue" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/green_tau_tokens"
+            android:id="@+id/green_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -77,7 +77,7 @@
             gs:token_color="green" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/red_tau_tokens"
+            android:id="@+id/red_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -86,7 +86,7 @@
             gs:token_color="red" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/yellow_tau_tokens"
+            android:id="@+id/yellow_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
