--- a/res/layout/right_token_area.xml
+++ b/res/layout/right_token_area.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical" >
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/yellow_tau_tokens"
+            android:id="@+id/yellow_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -23,7 +23,7 @@
             gs:token_color="yellow" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/red_tau_tokens"
+            android:id="@+id/red_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -32,7 +32,7 @@
             gs:token_color="red" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/green_tau_tokens"
+            android:id="@+id/green_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -41,7 +41,7 @@
             gs:token_color="green" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/blue_tau_tokens"
+            android:id="@+id/blue_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -50,7 +50,7 @@
             gs:token_color="blue" />
 
         <games.ghoststories.views.common.TaoTokenView
-            android:id="@+id/black_tau_tokens"
+            android:id="@+id/black_tao_tokens"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
