--- a/res/layout/gameboard.xml
+++ b/res/layout/gameboard.xml
@@ -12,7 +12,7 @@
         android:layout_rowSpan="30"
         android:layout_column="13"
         android:layout_columnSpan="30"
-        layout="@layout/village2"/>
+        layout="@layout/village"/>
     
     <include 
         android:layout_width="577dp"
